add paging for ourwork

--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,7 @@ RewriteRule ^admin(.*)$ 	webadmin.php 	[QSA,NC]
 RewriteRule ^about(.*)$ 	?main=about_us 	[QSA,NC]
 RewriteRule ^service(.*)$ 	?main=service 	[QSA,NC]
 RewriteRule ^ourwork(.*)$ 	?main=our_work 	[QSA,NC]
+RewriteRule ^([a-zA-Z0-9_-]+)-([0-9]+)-([0-9]+)-ourwork(.*)$  	?main=our_work&catid=$2&page_no=$3&xtname=$1$4 [QSA,NC]
 RewriteRule ^([a-zA-Z0-9_-]+)-([0-9]+)-ourwork(.*)$  	?main=our_work&catid=$2&xtname=$1$3 [QSA,NC]
 RewriteRule ^career(.*)$ 	    ?main=career 	[QSA,NC]
 RewriteRule ^contact(.*)$ 	?main=contact 	[QSA,NC]
